--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Locate Me</string>
     <string name="locate_me">Locate Me</string>
+    <string name="create_entry">Create Entry</string>
+    <string name="show_entries">Show Entries</string>
 </resources>
